--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "classmap": ["src/"]
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "yoast/yoastcs": "~0.5.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
     }
 }
