--- a/.travis.yml
+++ b/.travis.yml
@@ -16,24 +16,27 @@ branches:
     - /^release\/\d+\.\d+(\.\d+)?(-\S*)?$/
     - /^hotfix\/\d+\.\d+(\.\d+)?(-\S*)?$/
 
+php:
+- 7.0
+- 5.6
+- nightly
+
 jobs:
   fast_finish: true
   include:
     - php: 7.2
-      env: PHPLINT=1
-    - php: 5.2
-      # As 'trusty' is not supporting PHP 5.2/5.3 anymore, we need to force using 'precise'.
+    - php: 5.3
       dist: precise
-      env: PHPLINT=1
-    - php: nightly
-      env: PHPLINT=1
+    - php: 5.2
+      dist: precise
+
   allow_failures:
     # Allow failures for unstable builds.
     - php: nightly
 
 script:
 # PHP Linting
-- if [[ "$PHPLINT" == "1" ]]; then if find -L . -path ./vendor -prune -o -path ./node_modules -prune -o -name '*.php' -exec php -l {} \; | grep "^[Parse error|Fatal error]"; then exit 1; fi; fi
+- if find -L . -path ./vendor -prune -o -path ./node_modules -prune -o -name '*.php' -exec php -l {} \; | grep "^[Parse error|Fatal error]"; then exit 1; fi
 
 # Validate the composer.json file.
 # @link https://getcomposer.org/doc/03-cli.md#validate
