--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "yoast/yoastcs": "~0.5.0",
+        "yoast/yoastcs": "^1.0.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.4.3"
     }
 }
