PHPCS ruleset: update the prefixes array
... to cover both the prefix for global structures as well as for namespaced structures based on the agreed prefixes per September 2018.

--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -65,6 +65,7 @@
 			<!-- Provide the prefixes to look for. -->
 			<property name="prefixes" type="array">
 				<element value="yoast_i18n"/>
+				<element value="Yoast\WP\I18n"/>
 			</property>
 		</properties>
 	</rule>
