--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: php
 dist: trusty
-sudo: false
 
 cache:
   directories:
@@ -20,20 +19,17 @@ php:
   - 7.0
   - 5.6
   - "7.4snapshot"
+  - "nightly"
 
 jobs:
   fast_finish: true
   include:
     - php: 7.3
       env: PHPCS=1
-    - php: 5.3
-      dist: precise
-    - php: 5.2
-      dist: precise
 
   allow_failures:
     # Allow failures for unstable builds.
-    - php: "7.4snapshot"
+    - php: "nightly"
 
 before_install:
   - phpenv config-rm xdebug.ini || echo 'No xdebug config.'
@@ -47,7 +43,7 @@ script:
 
 # Validate the composer.json file.
 # @link https://getcomposer.org/doc/03-cli.md#validate
-- if [[ $TRAVIS_PHP_VERSION == "5.3" || $TRAVIS_PHP_VERSION == "7.3" ]]; then composer validate --no-check-all; fi
+- if [[ $TRAVIS_PHP_VERSION == "5.6" || $TRAVIS_PHP_VERSION == "7.3" ]]; then composer validate --no-check-all; fi
 
 # Check the code against YoastCS.
 - if [[ $PHPCS == "1" ]]; then vendor/bin/phpcs -q; fi
