--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "yoast/yoastcs": "^2.1.0",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "php-parallel-lint/php-console-highlighter": "^0.5"
+        "yoast/yoastcs": "^2.2.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
