--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 phpcs.xml export-ignore
 phpcs.xml.dist export-ignore
 /.cache export-ignore
+/.github export-ignore
 
 #
 # Auto detect text files and perform LF normalization
